--- a/Investigation.WEB/wwwroot/index.html
+++ b/Investigation.WEB/wwwroot/index.html
@@ -7,9 +7,9 @@
     <title>Investigation.WEB</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <!--<link rel="stylesheet" href="css/app.css" />-->
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="Investigation.WEB.styles.css" rel="stylesheet" />
+    <link href="css/Estilos.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -27,6 +27,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/CurrieTechnologies.Razor.SweetAlert2/sweetAlert2.min.js"></script>
 </body>
 
 </html>
